# ChangeLog for dev-db/phpmyadmin
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/phpmyadmin/ChangeLog,v 1.438 2011/08/07 17:19:31 armin76 Exp $

  07 Aug 2011; Raúl Porcel <armin76@gentoo.org> phpmyadmin-3.4.3.2.ebuild:
  alpha/sparc stable wrt #376369

  02 Aug 2011; Markos Chandras <hwoarang@gentoo.org> phpmyadmin-3.4.3.2.ebuild:
  Stable on amd64 wrt bug #376369

  27 Jul 2011; Jeroen Roovers <jer@gentoo.org> phpmyadmin-3.4.3.2.ebuild:
  Stable for HPPA (bug #376369).

  26 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  phpmyadmin-3.4.3.2.ebuild:
  ppc/ppc64 stable wrt #376369

  26 Jul 2011; Thomas Kahle <tomka@gentoo.org> phpmyadmin-3.4.3.2.ebuild:
  x86 stable per bug 376369

*phpmyadmin-3.4.3.2 (25 Jul 2011)

  25 Jul 2011; Alex Legler <a3li@gentoo.org> -phpmyadmin-3.4.1.ebuild,
  +phpmyadmin-3.4.3.2.ebuild:
  Version bump for security bug 376369. Removing old vunlerable versions

  11 Jul 2011; Jeroen Roovers <jer@gentoo.org> phpmyadmin-3.4.3.1.ebuild:
  Stable for HPPA (bug #373951).

  09 Jul 2011; Raúl Porcel <armin76@gentoo.org> phpmyadmin-3.4.3.1.ebuild:
  alpha/sparc stable wrt #373951

  09 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  phpmyadmin-3.4.3.1.ebuild:
  ppc/ppc64 stable wrt #373951

  08 Jul 2011; Thomas Kahle <tomka@gentoo.org> phpmyadmin-3.4.3.1.ebuild:
  x86 stable per bug 373951

  06 Jul 2011; Markos Chandras <hwoarang@gentoo.org> phpmyadmin-3.4.3.1.ebuild:
  Stable on amd64 wrt bug #373951

*phpmyadmin-3.4.3.1 (06 Jul 2011)

  06 Jul 2011; Alex Legler <a3li@gentoo.org> -phpmyadmin-3.4.0.ebuild,
  +phpmyadmin-3.4.3.1.ebuild:
  Version bump for security bug 373951. Removing unneeded vulnerable ebuilds.

  28 May 2011; Raúl Porcel <armin76@gentoo.org> phpmyadmin-3.4.1.ebuild:
  alpha/sparc stable wrt #368495

  27 May 2011; Kacper Kowalik <xarthisius@gentoo.org> phpmyadmin-3.4.1.ebuild:
  ppc/ppc64 stable wrt #368495
