@@ -1,17 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX postinstall-en-3.1.txt 1159 RMD160 5a7f64946c4ded92de62b1381940fb36b400d38a SHA1 7b2060c29c85a7a8c3180a2ba19d11d971830414 SHA256 cd7b5fdb108f10112e45bd50113c1425ef71908e958d752e0e990cd98f6e436f
-DIST phpMyAdmin-3.4.3.1-all-languages.tar.bz2 4924615 RMD160 fbeb9809da72cdfe5fb52e09198f543b6f7ef43a SHA1 ccc193fe8fd4afc38badcfd2a11ff2f6de200078 SHA256 138175f19802c5c1c70ceee14b89a86a19ee04917fd7bbd50b17bb200838eb69
 DIST phpMyAdmin-3.4.3.2-all-languages.tar.bz2 4924912 RMD160 39c1192bab3907a2a9ff67082c24d97cc6f6e8d3 SHA1 4a6b2bd7da67be9cdf45799dcb3e46f4d1a8397a SHA256 d468fffb147f001b70b222acd6d6bc7010c87e805a131371f0e1d20bdc1a93eb
-EBUILD phpmyadmin-3.4.3.1.ebuild 1617 RMD160 5c88980d6e8f6b31bf479b6d3e539d241dd25bb8 SHA1 48688cbf9412e5e4adf11d14eadd4a96463a673b SHA256 4fde713ae3484d7786d9d31a04a56d24d3470241ff1330db1f321d7f9db22e90
 EBUILD phpmyadmin-3.4.3.2.ebuild 1621 RMD160 efcac2cf96228d210729811b41e61dd5b4cfe09b SHA1 f621be21224083a21f096a224b717ae2805839eb SHA256 c90a87629d2df30dfb8076be5bad7f2ac46e4c42252be16c26093299f42290ee
-MISC ChangeLog 59507 RMD160 b013d3b998aff4667a2362bfabbd2beae6c7b3b5 SHA1 7f86cbc5d8bdc2d1aa9e47bb99087acf19593d2e SHA256 0978c8aa166577c794b98686cd2f8522661965224f4785f889ae48f17275709b
+MISC ChangeLog 59609 RMD160 59d2bddb96d15b38ebd0584597c9a83a77ca2d70 SHA1 55790471a3d0e64f00e436bc41e9bbd8c4b72f36 SHA256 1264f71db5150ddd615ba3bbf27649a89e1e4045056e7eb1b9374cf4a09903e3
 MISC metadata.xml 497 RMD160 eaba4b5566af47342cdcd58d660191afe16fd30a SHA1 ded49266c2f95c2b3367e6c56379fffc04410a70 SHA256 273736b7bcd027c8c569f9d8bfb3ee9e05fdfdb043e679133dea0fd13e39d06a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk4+ySkACgkQuQc30/atMkBD8QCePMJ02EpkiCw8sobTwbfJp9wd
-XK4AnjFaUsxAH9lXoFp2A+GCJSop1a8+
-=oTyH
+iF4EAREIAAYFAk5EK6UACgkQ3Ca6Xy8+rvTfjwD+Nftm9mx+64q/B7UQBceo8ZhL
+xYgYqxC5RR/dUG3GlWsA/1jeemhhnE4KMbBbB0MDrs2K0sTDeyCt3Iloup5Reihc
+=vmLk
 -----END PGP SIGNATURE-----
